--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid footer-content">
+    <div class="container-fluid footer-content-home">
         <div class="row text-center">
             <div class="col-lg-12">
                 <h4 class="text-dark-blue pb-lg-4">
