--- a/vision-mission.html
+++ b/vision-mission.html
@@ -43,17 +43,14 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid about-mid bg-dark-blue">
+    <div class="container-fluid vision-mid bg-dark-blue">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
-            <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
-            </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-orange font-50">
-                  “
-                </h2>
+                <h3 class="text-white mb-lg-4">
+                  Visi
+                </h3>
                 <p class="text-white font-titillium-italic">
                   Menjadi perusahaan tambang terintegrasi yang memiliki<br>
                   integritas, produktivitas, terpercaya, dengan pengelolaan K3LH<br>
@@ -65,60 +62,81 @@
         </div>
       </div>
       <div class="row mt-lg-5 second-section">
-        <div class="col-lg-8 offset-lg-3">
-          <h3 class="text-white">
-            Milestone
+        <div class="col-lg-12 text-center">
+          <h3 class="text-white mt-lg-5 mb-lg-3">
+            Misi
           </h3>
-          <div class="carousel-milestone owl-theme">
-            <div class="item">
-                <div class="row">
-                  <div class="col-lg-3">
-                    <h2 class="text-white title-year">
-                      2011
-                    </h2>
-                  </div>
-                  <div class="col-lg-9">
-                    <p class="text-white">
-                      Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
-                      jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
-                      justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
-                      penambangan batubara.
-                    </p>
-                  </div>
-                </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="container">
+          <div class="row my-lg-5">
+            <div class="col-lg-4 text-center">
+              <img class="img-icon" src="images/mission-icon-content-02.png" alt="">
+              <h6 class="text-orange my-lg-4">
+                INTEGRITY
+              </h6>
+              <p class="text-white font-roboto">
+                Menumbuhkan integritas di kalangan para<br>
+                pemangku kepentingan guna memperoleh<br>
+                kepercayaan mitra kerja.
+              </p>
             </div>
-            <div class="item">
-              <div class="row">
-                <div class="col-lg-3">
-                  <h2 class="text-white title-year">
-                    2011
-                  </h2>
-                </div>
-                <div class="col-lg-9">
-                  <p class="text-white">
-                    Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
-                    jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
-                    justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
-                    penambangan batubara.
-                  </p>
-                </div>
-              </div>
-          </div>
+            <div class="col-lg-4 text-center">
+              <img class="img-icon" src="images/mission-icon-content-03.png" alt="">
+              <h6 class="text-orange my-lg-4">
+                CONTINUOUS DEVELOPMENT
+              </h6>
+              <p class="text-white font-roboto">
+                Mendorong peningkatan kompetensi<br>
+                karyawan dan perbaikan berkesinambungan<br>
+                guna membangun sumber daya manusia<br>
+                yang tangguh.
+              </p>
+            </div>
+            <div class="col-lg-4 text-center">
+              <img class="img-icon" src="images/mission-icon-content-04.png" alt="">
+              <h6 class="text-orange my-lg-4">
+                OPTIMUM PRODUCTION
+              </h6>
+              <p class="text-white font-roboto">
+                Memperkuat sistem operasional berlandaskan<br>
+                sistem manajemen keselamatan pertambangan<br>
+                agar terwujud pengelolaan yang efektif dan<br>
+                memanfaatkan sumber daya perusahaan<br>
+                untuk mencapai produksi optimal.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid about-bottom-content">
-      <div class="row">
-        <div class="col-lg-5 offset-lg-6 text-right">
-          <h5 class="text-orange">
-            NILAI-NILAI KAMI
-          </h5>
-          <p class="text-white font-titillium-italic">
-            Melangkah setahap demi setahap, dengan keyakinan<br>
-            dan integritas, menampilkan produktifitas,<br>
-            komitmen dan kesetiaan.
-          </p>
+      <div class="row my-lg-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 offset-lg-2 text-center">
+              <img class="img-icon" src="images/mission-icon-content-05.png" alt="">
+              <h6 class="text-orange my-lg-4">
+                TEAMWORK
+              </h6>
+              <p class="text-white font-roboto">
+                Menghargai loyalitas, kebersamaan dan kerja<br>
+                keras secara adil untuk membangun kerja<br>
+                sama yang kokoh.
+              </p>
+            </div>
+            <div class="col-lg-4 text-center">
+              <img class="img-icon" src="images/mission-icon-content-06.png" alt="">
+              <h6 class="text-orange my-lg-4">
+                EXCELLENCE
+              </h6>
+              <p class="text-white font-roboto">
+                Mengoptimalkan potensi dan pengalaman<br>
+                perusahaan yang menghadirkan solusi<br>
+                bagi mitra kerja, masyarakat dan<br>
+                lingkungan hidup. 
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -136,7 +154,7 @@
                   <div class="col-lg-12">
                     <a href="#" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
-                        VISION & MISSION
+                        COMPANY PROFILE
                       </span> 
                    </a>
                    <a href="#" class="link-orange-border mx-lg-4">
