--- a/business-mining.html
+++ b/business-mining.html
@@ -23,133 +23,49 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bus-top">
+    <div class="container-fluid busd-top">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue">
-                  Our Businesses
+                <h6 class="text-orange">
+                  OUR BUSINESSES
+                </h6>
+                <h2 class="text-dark-blue mb-lg-4">
+                  Ansaf Mining
                 </h2>
+                <a href="#" class="mt-lg-5 d-inline-block">
+                  <i class="fas fa-chevron-left text-orange"></i> kembali ke halaman sebelumnya
+                </a>
             </div>
           </div>
         </div>
       </div>
     </div> 
-    <div class="container-fluid bus-mid">
+    <div class="container-fluid busd-mid">
       <div class="row first-section">
-        <div class="col-lg-12 text-center">
-          <h3 class="text-white my-lg-4">
-            PT Ansaf Inti Resources
+        <div class="col-lg-6 offset-lg-6">
+          <h6 class="text-orange mb-lg-1">
+            TENTANG BISNIS INI
+          </h6>
+          <h3 class="text-white mb-lg-4">
+            Usaha Jasa Penambangan
           </h3>
           <p class="text-white">
-            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi<br>
-            Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal<br>
-            trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.<br>
-            Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara<br>
-            sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,<br>
-            Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
+            Seiring dengan pengalaman dalam bidang Usaha Jasa<br>
+            Penambangan batubara maka PT. Ansaf Inti Resources mulai<br>
+            melakukan pengembangan usaha untuk mengelola IUP di Embalut<br>
+            dan Batuah dan melakukan diversifikasi usaha ke bidang lain yaitu<br>
+            dibidang Nikel dan penambangan batu andesit.<br>
+            <br>  
+            Konsep ini diambil untuk menyelaraskan kebutuhan nikel dimasa<br>
+            yang akan datang dan sebagai kontribusi terhadap pembangunan<br>
+            yang berkesinambungan dibidang infrastruktur saat ini.
           </p>
-        </div>
-      </div>
-      <div class="row thumbnail-bus bg-light-gray">
-        <div class="col-lg-6 item">
-          <div class="content-wrapper d-flex">
-            <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
-            </div>
-            <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4">
-                  Ansaf Mining
-                </h2>
-                <p class="text-gray font-roboto">
-                  Seiring dengan pengalaman dalam bidang Usaha<br>
-                  Jasa Penambangan batubara maka PT. Ansaf Inti<br>
-                  Resources mulai melakukan pengembangan usaha<br>
-                  untuk mengelola IUP di Embalut dan Batuah dan<br>
-                  melakukan diversifikasi usaha ke bidang lain...
-                </p>
-                <a href="#" class="link-gray-border my-lg-3 d-inline-block">
-                  SELENGKAPNYA
-                </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 p-0">
-          <img class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
-        </div>
-        <div class="col-lg-6 p-0">
-          <img class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
-        </div>
-        <div class="col-lg-6 item">
-          <div class="content-wrapper d-flex">
-            <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
-            </div>
-            <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4">
-                  Ansaf Services
-                </h2>
-                <p class="text-gray font-roboto">
-                  Semenjak berdirinya di tahun 2014 sebagai perusahaan<br>
-                  penyedia jasa pertambangan, Ansaf telah melayani<br>
-                  serangkaian layanan kontrak pertambangan diberbagai<br>
-                  perusahaan. Kita menangani perencanaan tambang,<br>
-                  pengangkutan lapisan tanah penutup...
-                </p>
-                <a href="#" class="link-gray-border my-lg-3 d-inline-block">
-                  SELENGKAPNYA
-                </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 item">
-          <div class="content-wrapper d-flex">
-            <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
-            </div>
-            <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4">
-                  Ansaf Logistic
-                </h2>
-                <p class="text-gray font-roboto">
-                  Sejak tahun 2018, PT Ansaf Inti Resources berupaya<br>
-                  melakukan diversifikasi usaha dengan menjajaki<br>
-                  usaha dibidang support logistik bagi kegiatan coal<br>
-                  barging. Saat ini terdapat 2 perusahaan yang<br>
-                  bergerak dibidang support coal barging...
-                </p>
-                <a href="#" class="link-gray-border my-lg-3 d-inline-block">
-                  SELENGKAPNYA
-                </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 p-0">
-          <img class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
-        </div>
-      </div>
-      <div class="row bus-client text-center">
-        <div class="col-lg-12 my-lg-5">
-          <h3 class="text-dark-blue">
-            Our Subsidiaries
-          </h3>
-        </div>
-        <div class="col-lg-2 offset-lg-2 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-05.png" alt="">
-        </div>
-        <div class="col-lg-2 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-06.png" alt="">
-        </div>
-        <div class="col-lg-2 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-07.png" alt="">
-        </div>
-        <div class="col-lg-2 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-08.png" alt="">
         </div>
       </div>
     </div>
@@ -157,7 +73,7 @@
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4">
-                Masih ada pertanyaan?
+                Bisnis Kami Lainnya
               </h4>
           </div>
       </div>
@@ -167,9 +83,14 @@
                   <div class="col-lg-12">
                     <a href="#" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
-                        HUBUNGI KAMI
+                        ANSAF SEVICES
                       </span> 
                    </a>
+                   <a href="#" class="link-orange-border mx-lg-4">
+                    <span class="text-orange">
+                      ANSAF LOGISTIK
+                    </span> 
+                    </a>
                   </div>
               </div>
           </div>
