--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -36,7 +36,7 @@
                   OUR PROJECTS
                 </h6>
                 <h2 class="text-dark-blue mb-lg-4">
-                  Existing Projects
+                  Prospective Projects
                 </h2>
                 <a href="#" class="mt-lg-5 d-inline-block">
                   <i class="fas fa-chevron-left text-orange"></i> kembali ke halaman sebelumnya
@@ -53,19 +53,45 @@
             “
           </h2>
           <p class="text-white">
-            Dengan sepenuh hati dalam memberikan pelayanan kepada<br>
-            para klien, PT Ansaf semakin dipercaya untuk mengerjakan<br>
-            beberapa proyek pertambangan batubara baik di Kalimantan<br>
-            Timur dan Sumatra Selatan
+            Dengan kemampuan dan komitmen, PT Ansaf berupaya<br>
+            untuk terus melakukan pekerjaan penambangan dan<br>
+            pengembangan infrastruktur. 
           </p>
         </div>
         <div class="col-lg-7 pr-lg-0">
-          <img class="img-content" src="images/exi-projects-mid-section-content-02.png" alt="">
+          <img class="img-content" src="images/prev-projects-mid-section-content-02.png" alt="">
         </div>
       </div>
     </div>
     <div class="container-fluid list-prevp">
-      <div class="row">
+      <div class="row mb-lg-5">
+        <div class="col-lg-12 pl-lg-0 pt-lg-5">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block">
+                <img class="w-auto mt-lg-2" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-4">
+                <div class="d-flex">
+                  <h2 class="text-dark-blue mr-lg-5">
+                    Operational Areas
+                  </h2>
+                  <span class="font-roboto text-gray ml-lg-5 my-lg-2">
+                    <i class="fas fa-circle text-orange"></i> Previous Projects 
+                  </span>
+                  <span class="font-roboto text-gray  my-lg-2 ml-lg-5">
+                    <i class="fas fa-circle text-dark-blue"></i> Current Projects 
+                  </span>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row px-lg-4 mb-lg-5 pb-lg-5">
+        <div class="col-lg-12 px-lg-5">
+          <img class="img-fluid px-lg-5" src="images/prospective-operational-areas-02.png" alt="">
+        </div>
+      </div>
+      <div class="row my-lg-5">
         <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
@@ -76,7 +102,7 @@
                   LIST
                 </h6>
                 <h2 class="text-dark-blue">
-                  Existing Projects
+                  Previous Projects
                 </h2>
             </div>
           </div>
@@ -332,7 +358,7 @@
                    </a>
                    <a href="#" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
-                      PROSPECTIVE PROJECTS
+                      EXISTING PROJECTS
                     </span> 
                     </a>
                   </div>
