--- a/businesses.html
+++ b/businesses.html
@@ -176,37 +176,37 @@
       </div>
   </div>
   <div class="container-fluid footer-details mb-lg-5">
-      <div class="row">
-          <div class="col-lg-2">
-              <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
-          </div>
-          <div class="col-lg-4">
-              <p class="text-gray">
-                  Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-                  Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-                  KuninganJakarta 12950
-              </p>
-          </div>
-          <div class="col-lg-3 text-center">
-              <a href="#" class="link-orange-border">
-                 <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
-              </a>
-              <p class="text-gray mt-lg-3">
-                  Fax (0541) 261 532
-              </p>
-          </div>
-          <div class="col-lg-3">
-              <a href="#" class="text-gray d-block">
-                  <i class="fab fa-facebook-square"></i> Ansaf Indonesia
-              </a>
-              <a href="#" class="text-gray d-block">
-                  <i class="fab fa-twitter"></i> Ansaf Indonesia
-              </a>
-              <a href="#" class="text-gray d-block">
-                  <i class="fab fa-youtube"></i> Ansaf Indonesia
-              </a>
-          </div>
+    <div class="row">
+      <div class="col-lg-2">
+          <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
+      <div class="col-lg-4">
+          <p class="text-gray">
+              Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
+              Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
+              KuninganJakarta 12950
+          </p>
+      </div>
+      <div class="col-lg-3 fax-column text-center">
+          <a href="#" class="link-orange-border">
+             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
+          </a>
+          <p class="text-gray mt-lg-3">
+              Fax (0541) 261 532
+          </p>
+      </div>
+      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+          <a href="#" class="text-gray d-block">
+              <i class="fab fa-facebook-square"></i> Ansaf Indonesia
+          </a>
+          <a href="#" class="text-gray d-block">
+              <i class="fab fa-twitter"></i> Ansaf Indonesia
+          </a>
+          <a href="#" class="text-gray d-block">
+              <i class="fab fa-youtube"></i> Ansaf Indonesia
+          </a>
+      </div>
+  </div>
   </div>
   <div class="container-fluid footer bg-dark-blue">
       <div class="row">
