--- a/index.html
+++ b/index.html
@@ -244,28 +244,28 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-4">
-                        <h2 class="text-blue number-counter">
+                        <h2 class="text-blue number-counter font-50">
                             9+
                         </h2>
-                        <h6 class="text-orange">
+                        <h4 class="text-orange">
                             TAHUN
-                        </h6>
+                        </h4>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="text-blue number-counter">
+                        <h2 class="text-blue number-counter font-50">
                             100+
                         </h2>
-                        <h6 class="text-orange">
+                        <h4 class="text-orange">
                             KLIEN
-                        </h6>
+                        </h4>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="text-blue number-counter">
+                        <h2 class="text-blue number-counter font-50">
                             2,000+
                         </h2>
-                        <h6 class="text-orange">
+                        <h4 class="text-orange">
                             KARYAWAN
-                        </h6>
+                        </h4>
                     </div>
                 </div>
             </div>
