--- a/about.html
+++ b/about.html
@@ -15,10 +15,44 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="navbar">
+        <div class="navbar-ansaf">
             <div class="row">
-                <div class="col-lg-4">
-                    <img class="img-fluid" src="images/ansaf-logo.png" alt="">
+                <div class="col-lg-3">
+                    <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
+                </div>
+                <div class="col-lg-8">
+                  <ul>
+                    <li>
+                      <a href="#">
+                        ABOUT US
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        OUR BUSINESSES
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        OUR PROJECTS
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        CSR
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        GALLERY
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        CONTACT US
+                      </a>
+                    </li> 
+                  </ul>
                 </div>
             </div>
         </div>
