--- a/about.html
+++ b/about.html
@@ -14,27 +14,26 @@
     <title>About | Ansaf</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="navbar-ansaf">
+    <div class="container-fluid navbar-ansaf">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-2 ml-lg-5">
                     <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 ml-lg-5 text-right">
                   <ul>
                     <li>
                       <a href="#">
-                        ABOUT US
+                        About Us
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        OUR BUSINESSES
+                        Our Businesses
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        OUR PROJECTS
+                        Our Projects
                       </a>
                     </li>
                     <li>
@@ -44,18 +43,27 @@
                     </li>
                     <li>
                       <a href="#">
-                        GALLERY
+                        Gallery
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        CONTACT US
+                        Contact Us
                       </a>
                     </li> 
                   </ul>
                 </div>
+                <div class="col-lg-1 lang-ansaf">
+                  <div class="divider"></div>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        ID
+                      </a>
+                    </li>
+                  </ul>
+                </div>
             </div>
-        </div>
     </div>
     <div class="container-fluid about-top">
       <div class="row">
