--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid home-mid-content py-5">
+    <div class="container-fluid home-mid-content pt-lg-5">
         <div class="row my-5">
             <div class="col-lg-3 py-lg-5 pl-lg-0">
                 <div class="wrapper d-flex">
