--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,40 @@
         </div>
       </div>
     </div>
+    <div class="container section-forms-ansaf">
+      <div class="row my-lg-5">
+        <div class="col-lg-6">
+            <div class="form-group left-forms">
+              <label class="font-roboto text-gray">NAMA :</label>
+              <input type="text" class="form-control input-gray">
+            </div>
+            <div class="form-group left-forms">
+              <label class="font-roboto text-gray">EMAIL :</label>
+              <input type="text" class="form-control input-gray">
+            </div>
+            <div class="form-group left-forms">
+              <label class="font-roboto text-gray">SUBJEK :</label>
+              <input type="text" class="form-control input-gray">
+            </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="form-group my-lg-5">
+            <label class="font-roboto text-gray">PESAN :</label>
+            <textarea class="form-control input-gray" rows="7"></textarea>
+          </div>
+          <a href="#" class="link-blue-border d-block py-lg-2 text-center">
+            KIRIM PESAN
+          </a>
+      </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 px-lg-0">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8153953.168616226!2d107.46645460032195!3d-3.71766482772731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df679e3fd85d3c5%3A0x2bb0c88e0315e87b!2sPT.%20Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1616899120793!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
+        </div>
+      </div>
+    </div>
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
