--- a/about.html
+++ b/about.html
@@ -19,12 +19,29 @@
                 <div class="col-lg-2 ml-lg-5">
                     <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
                 </div>
-                <div class="col-lg-8 ml-lg-5 text-right">
+                <div class="col-lg-8 menu-wrap ml-lg-5 text-right">
                   <ul>
                     <li>
                       <a href="#">
                         About Us
                       </a>
+                      <ul>
+                        <li>
+                          <a href="#">
+                            Company Profile
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Vision & Mission
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Board of Directors
+                          </a>
+                        </li>
+                      </ul>
                     </li>
                     <li>
                       <a href="#">
