--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <div class="col-lg-2 ml-lg-5">
                     <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
                 </div>
-                <div class="col-lg-8 menu-wrap ml-lg-5 text-right">
+                <div class="col-lg-8 menu-wrap ml-lg-5">
                   <ul>
                     <li>
                       <a href="#">
