--- a/index.html
+++ b/index.html
@@ -14,15 +14,74 @@
     <title>Home | Ansaf</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="navbar">
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="img-fluid" src="images/logo-white.png" alt="">
-                </div>
+    <div class="container-fluid navbar-ansaf home">
+        <div class="row">
+            <div class="col-lg-2 ml-lg-5">
+                <img class="img-fluid logo" src="images/logo-white.png" alt="">
+            </div>
+            <div class="col-lg-8 menu-wrap ml-lg-5">
+              <ul>
+                <li>
+                  <a href="#">
+                    About Us
+                  </a>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        Company Profile
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Vision & Mission
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Board of Directors
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">
+                    Our Businesses
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Our Projects
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    CSR
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Gallery
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Contact Us
+                  </a>
+                </li> 
+              </ul>
+            </div>
+            <div class="col-lg-1 lang-ansaf">
+              <div class="divider"></div>
+              <ul>
+                <li>
+                  <a href="#">
+                    ID
+                  </a>
+                </li>
+              </ul>
             </div>
         </div>
-    </div>
+</div>
     <div class="container-fluid bg-home-top overflow-hidden">
         <div class="row">
             <div class="col-lg-12 px-0">
