--- a/index.html
+++ b/index.html
@@ -113,6 +113,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-lg-2 home-caption">
+                                <div class="wrapper d-flex">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-lg-3">
+                                        <h1 class="text-white">
+                                            Solution
+                                            through
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-10">
+                                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
