--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
                             </div>
                             <div class="col-lg-10">
                                 <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                                <div class="slide-number">
+                                    <h6 class="text-white">
+                                        1/5
+                                    </h6>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -158,7 +163,7 @@
                     <a href="#" class="link-white-border my-3 d-inline-block">
                         SELENGKAPNYA
                     </a>
-                    <img class="tractors" src="images/home-about-section-asset-08.png" alt="">
+                    <img class="tractors move-right" src="images/home-about-section-asset-08.png" alt="">
                     <img class="guy" src="images/home-about-section-asset-09.png" alt="">
                 </div>
             </div>
