--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         SELENGKAPNYA
                     </a>
                     <img class="tractors move-right" src="images/home-about-section-asset-08.png" alt="">
-                    <img class="guy" src="images/home-about-section-asset-09.png" alt="">
+                    <img class="guy move-left" src="images/home-about-section-asset-09.png" alt="">
                 </div>
             </div>
         </div>
