--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-10">
-                                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                                <img class="img-fluid float-right" src="images/home-top-image-slider-07.png" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
                                         1/5
@@ -141,6 +141,104 @@
                             </div>
                             <div class="col-lg-10">
                                 <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                                <div class="slide-number">
+                                    <h6 class="text-white">
+                                        2/5
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-lg-2 home-caption">
+                                <div class="wrapper d-flex">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-lg-3">
+                                        <h1 class="text-white">
+                                            Solution
+                                            through
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-10">
+                                <img class="img-fluid float-right" src="images/home-top-image-slider-09.png" alt="">
+                                <div class="slide-number">
+                                    <h6 class="text-white">
+                                        3/5
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-lg-2 home-caption">
+                                <div class="wrapper d-flex">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-lg-3">
+                                        <h1 class="text-white">
+                                            Solution
+                                            through
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-10">
+                                <img class="img-fluid float-right" src="images/home-top-image-slider-10.png" alt="">
+                                <div class="slide-number">
+                                    <h6 class="text-white">
+                                        4/5
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-lg-2 home-caption">
+                                <div class="wrapper d-flex">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-lg-3">
+                                        <h1 class="text-white">
+                                            Solution
+                                            through
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-10">
+                                <img class="img-fluid float-right" src="images/home-top-image-slider-11.png" alt="">
+                                <div class="slide-number">
+                                    <h6 class="text-white">
+                                        5/5
+                                    </h6>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -258,6 +356,8 @@
             </div>
         </div>
         <div class="row bg-mid-value">
+            <img class="cloud move-left" src="images/ornaments-home-bottom-08.png" alt="">
+            <img class="tractors move-right" src="images/ornaments-home-bottom-09.png" alt="">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-9 offset-lg-3">
