--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid about-mid bg-dark-blue">
+    <div class="container-fluid about-mid bg-dark-blue position-relative overflow-hidden">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
@@ -170,6 +170,7 @@
           </div>
         </div>
       </div>
+      <img class="guy move-right" src="images/about-content-guy-05.png" alt="">
     </div>
     <div class="container-fluid about-bottom-content">
       <div class="row">
