--- a/vision-mission.html
+++ b/vision-mission.html
@@ -103,6 +103,7 @@
       </div>
     </div> 
     <div class="container-fluid vision-mid bg-dark-blue">
+      <img class="two-guy move-left" src="images/vision-two-guy-02.png" alt="">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
