--- a/business-services.html
+++ b/business-services.html
@@ -46,7 +46,8 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid buss-mid">
+    <div class="container-fluid buss-mid position-relative">
+      <img class="scope-services move-right" src="images/business-services-scope-content-03.png" alt="">
       <div class="row first-section">
         <div class="col-lg-6 offset-lg-6">
           <h6 class="text-orange mb-lg-1">
