--- a/business-logistic.html
+++ b/business-logistic.html
@@ -46,7 +46,8 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid busl-mid">
+    <div class="container-fluid busl-mid position-relative">
+      <img class="tractor-logistic move-right" src="images/business-logistic-tractors-02.png" alt="">
       <div class="row first-section">
         <div class="col-lg-6 offset-lg-6">
           <h6 class="text-orange mb-lg-1">
