--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,7 @@
       </div>
     </div> 
     <div class="container-fluid proj-mid">
+      <img class="projects-tractor move-left" src="images/projects-tractor-02.png" alt="">
       <div class="row first-section">
         <div class="col-lg-5 offset-lg-2 details">
           <h3 class="text-white my-lg-4">
