--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid proj-mid">
+    <div class="container-fluid proj-mid position-relative overflow-hidden">
       <img class="projects-tractor move-left" src="images/projects-tractor-02.png" alt="">
       <div class="row first-section">
         <div class="col-lg-5 offset-lg-2 details">
