--- a/index.html
+++ b/index.html
@@ -22,49 +22,49 @@
             <div class="col-lg-8 menu-wrap ml-lg-5">
               <ul>
                 <li>
-                  <a href="#">
+                  <a href="about.html">
                     About Us
                   </a>
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="about.html">
                         Company Profile
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="viison-mission.html">
                         Vision & Mission
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="bod.html">
                         Board of Directors
                       </a>
                     </li>
                   </ul>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="businesses.html">
                     Our Businesses
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="projects.html">
                     Our Projects
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="csr.html">
                     CSR
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="gallery.html">
                     Gallery
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="contact.html">
                     Contact Us
                   </a>
                 </li> 
@@ -258,7 +258,7 @@
                         mengelolanya, berawal dari keinginan untuk dapat berperan dalam bidang yang<br>
                         membawa manfaat bagi masyarakat.
                     </p>
-                    <a href="#" class="link-white-border my-3 d-inline-block">
+                    <a href="about.html" class="link-white-border my-3 d-inline-block">
                         SELENGKAPNYA
                     </a>
                     <img class="tractors move-right" src="images/home-about-section-asset-08.png" alt="">
@@ -305,7 +305,7 @@
                     <div class="item">
                         <div class="thumbnail">
                             <div class="image-thumbnail">
-                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid" src="images/home-our-business-08.jpg">
                                 <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
                             </div>
                             <div class="title">
@@ -318,7 +318,7 @@
                     <div class="item">
                         <div class="thumbnail">
                             <div class="image-thumbnail">
-                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid" src="images/home-our-business-09.jpg">
                                 <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
                             </div>
                             <div class="title">
@@ -414,7 +414,7 @@
                             sekedar kewajiban. Bagi kami, tanggung jawab<br>
                             sosial melekat dengan operasi kami di manapun.
                         </p>
-                        <a href="#" class="link-white-border my-3 d-inline-block">
+                        <a href="csr.html" class="link-white-border my-3 d-inline-block">
                             SELENGKAPNYA
                         </a>
                     </div>
