--- a/about.html
+++ b/about.html
@@ -17,54 +17,56 @@
     <div class="container-fluid navbar-ansaf">
             <div class="row">
                 <div class="col-lg-2 ml-lg-5">
+                  <a href="index.html">
                     <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
+                  </a>
                 </div>
                 <div class="col-lg-8 menu-wrap ml-lg-5">
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="about.html">
                         About Us
                       </a>
                       <ul>
                         <li>
-                          <a href="#">
+                          <a href="about.html">
                             Company Profile
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="vision-mission.html">
                             Vision & Mission
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="bod.html">
                             Board of Directors
                           </a>
                         </li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="businesses.html">
                         Our Businesses
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="projects.html">
                         Our Projects
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="csr.html">
                         CSR
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="gallery.html">
                         Gallery
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </li> 
