--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="container-fluid navbar-ansaf home">
         <div class="row">
             <div class="col-lg-2 ml-lg-5">
-                <img class="img-fluid logo" src="images/logo-white.png" alt="">
+                <a href="index.html">
+                    <img class="img-fluid logo" src="images/logo-white.png" alt="">
+                </a>
             </div>
             <div class="col-lg-8 menu-wrap ml-lg-5">
               <ul>
