--- a/bod.html
+++ b/bod.html
@@ -14,15 +14,76 @@
     <title>Board of Directors | Ansaf</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="navbar">
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="img-fluid" src="images/ansaf-logo.png" alt="">
-                </div>
-            </div>
+  <div class="container-fluid navbar-ansaf">
+    <div class="row">
+        <div class="col-lg-2 ml-lg-5">
+          <a href="index.html">
+            <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-lg-8 menu-wrap ml-lg-5">
+          <ul>
+            <li>
+              <a href="about.html">
+                About Us
+              </a>
+              <ul>
+                <li>
+                  <a href="about.html">
+                    Company Profile
+                  </a>
+                </li>
+                <li>
+                  <a href="vision-mission.html">
+                    Vision & Mission
+                  </a>
+                </li>
+                <li>
+                  <a href="bod.html">
+                    Board of Directors
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="businesses.html">
+                Our Businesses
+              </a>
+            </li>
+            <li>
+              <a href="projects.html">
+                Our Projects
+              </a>
+            </li>
+            <li>
+              <a href="csr.html">
+                CSR
+              </a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                Gallery
+              </a>
+            </li>
+            <li>
+              <a href="contact.html">
+                Contact Us
+              </a>
+            </li> 
+          </ul>
+        </div>
+        <div class="col-lg-1 lang-ansaf">
+          <div class="divider"></div>
+          <ul>
+            <li>
+              <a href="#">
+                ID
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
+</div>
     <div class="container-fluid bod-top">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
