--- a/about.html
+++ b/about.html
@@ -200,12 +200,12 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12">
-                    <a href="#" class="link-orange-border mx-lg-4">
+                    <a href="vision-mission.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         VISION & MISSION
                       </span> 
                    </a>
-                   <a href="#" class="link-orange-border mx-lg-4">
+                   <a href="bod.html" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
                       BOARD OF DIRECTORS
                     </span> 
