--- a/bod.html
+++ b/bod.html
@@ -165,12 +165,12 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12">
-                    <a href="#" class="link-orange-border mx-lg-4">
+                    <a href="about.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         COMPANY PROFILE
                       </span> 
                    </a>
-                   <a href="#" class="link-orange-border mx-lg-4">
+                   <a href="vision-mission.html" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
                       VISION & MISSION
                     </span> 
